kind/abk/abk-accounts-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: abk-accounts
  namespace: abk
  labels:
    type: abk-accounts-backend
spec:
  template:
    metadata:
      name: abk-accounts-pod
      namespace: abk
      labels:
        type: abk-accounts-backend
    spec:
      containers:
        - name: abk-accounts
          image: registry.tjonahen.home:5000/tjonahen/abk2-accounts
          ports:
            - containerPort: 3001
  replicas: 1
  selector:
    matchLabels:
      type: abk-accounts-backend
