kind/abk/abk-costcenters-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: abk-costcenters
  namespace: abk
  labels:
    type: abk-costcenters-backend
spec:
  template:
    metadata:
      name: abk-costcenters-pod
      labels:
        type: abk-costcenters-backend
    spec:
      containers:
        - name: abk-costcenters
          image: registry.tjonahen.home:5000/tjonahen/abk2-costcenters
          ports:
            - containerPort: 3002
  replicas: 1
  selector:
    matchLabels:
      type: abk-costcenters-backend
