kind/abk/abk-transactions-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: abk-transactions
  namespace: abk
  labels:
    type: abk-transactions-backend
spec:
  template:
    metadata:
      name: abk-transactions-pod
      labels:
        type: abk-transactions-backend

    spec:
      containers:
        - name: abk-transactions
          image: registry.tjonahen.home:5000/tjonahen/abk2-transacties
          ports:
            - containerPort: 3003
  replicas: 1
  selector:
    matchLabels:
      type: abk-transactions-backend
