kind/abk/abk-upload-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: abk-upload
  namespace: abk
  labels:
    type: abk-upload-backend
spec:
  template:
    metadata:
      name: abk-upload-pod
      labels:
        type: abk-upload-backend
    spec:
      containers:
        - name: abk-upload
          image: registry.tjonahen.home:5000/tjonahen/abk2-upload
          ports:
            - containerPort: 3004
  replicas: 1
  selector:
    matchLabels:
      type: abk-upload-backend
