kind/abk/abk-accounts-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: abk-accounts-service
  name: abk-accounts-service
  namespace: abk
spec:
  type: ClusterIP
  ports:
  - name: abk-accounts-ports
    port: 3001
  selector:
    type: abk-accounts-backend
