kind/abk/abk-transactions-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: abk-transactions-service
  name: abk-transactions-service
  namespace: abk
spec:
  type: ClusterIP
  ports:
  - name: abk-transactions-ports
    port: 3003
  selector:
    type: abk-transactions-backend
