kind/abk/abk-ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: abk
  name: abk-ingress-resource-backend
  # annotations:
  #   nginx.ingress.kubernetes.io/use-regex: "true"
  #   nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /accounts
            pathType: Prefix
            backend:
              service:
                name: abk-accounts-service
                port:
                  number: 3001
          - path: /costcenters
            pathType: Prefix
            backend:
              service:
                name: abk-costcenters-service
                port:
                  number: 3002
          - path: /transactions
            pathType: Prefix
            backend:
              service:
                name: abk-transactions-service
                port:
                  number: 3003
          - path: /upload
            pathType: Prefix
            backend:
              service:
                name: abk-upload-service
                port:
                  number: 3004
          - path: /
            pathType: Prefix
            backend:
              service:
                name: abk-client-service
                port:
                  number: 3006
